--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 			overflow: hidden;
 			border: 1px solid black;
 			display: flex;
-			/*justify-content: center;*/
 			align-items: center;
+			background-image: url(bg.jpg);
+			background-size: cover;
+			cursor: pointer;
+			border-radius: 20px;
 		}
 
 		.bungkus img{
